--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,13 +51,14 @@
 
         <div class="col-sm-8 blog-main">
 
+          {% for post in site.posts %}
           <div class="blog-post">
-            {% for post in site.posts %}
             <a name="{{ post.id }}"></a>
             <p class="blog-post-meta">{{ post.date | date_to_string }}</p>
+          <hr>
             {{ post }}
-            {% endfor %}
           </div>
+          {% endfor %}
 
           <nav>
             <ul class="pager">
@@ -71,20 +72,20 @@
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
             <h4>我是谁</h4>
-            <p>pysnow530是一个运维开发工程师，平时喜欢捣鼓lisp和python，现在住在深圳南山</p>
+            <p>pysnow530是一个运维开发工程师，平时喜欢捣鼓lisp和python，现隐居深圳南山</p>
             <p>pysnow530的唱功一流，不抽烟，但是有时候会喝酒</p>
             <h4>我从哪里来</h4>
-            <p>跟你一样，pysnow530也是从垃圾桶里拣来的</p>
+            <p>跟你一样，pysnow530也是从垃圾堆里拣来的</p>
             <h4>我到哪里去</h4>
             <p>尘归尘，土归土，希望以后可以营养一株向日葵</p>
           </div>
           <div class="sidebar-module">
             <h4>日志列表</h4>
+            {% for post in site.posts %}
             <ol class="list-unstyled">
-              {% for post in site.posts %}
               <a href="#{{post.id}}">{{ post.title }}</a>
-              {% endfor %}
             </ol>
+            {% endfor %}
           </div>
           <div class="sidebar-module">
             <h4>一起喝茶</h4>
