--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,9 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#">博客</a>
+            <a class="blog-nav-item" href="#">首页</a>
+            <a class="blog-nav-item active" href="#">博客</a>
+            <a class="blog-nav-item" href="javascript:alert('我就是爱音乐，莫叫我停下来。\n我就是爱唱歌，呼吸打着节拍。')">关于我</a>
         </nav>
       </div>
     </div>
